# DMFT_HF_IPT

./: .gitignore  CMakeLists.txt  Makefile  Makefile_BEO05  Makefile_GCC  README  build.sh  colormap.py  mainIPT.cpp  pade.py  pade_sus.py  params.json
mea/: HF_AFM.py  IPT_AFM.py  IPT_AFM_2.py  IPT_MAIN.py  IPT_PM_2.py  LU_Doolittle_alg.py  Makefile  NCA.cpp  NCA_Bethe.cpp  Test_cubic_spline.py  Test_linear_spline.py  bethe_lattice_afm.py  bubble_as_function_q_w.py  bubble_as_function_q_w_improved.py  bubble_test_1.py  bubble_test_2.py  bubble_test_3.py  bubble_test_4.py  hartree_Bethe_lattice.cpp  hartree_Bethe_lattice_2.cpp  main_spline_testing.py  pade_other.py  plot_2D_q_vs_omega.py  plot_2D_q_vs_omega_jj_szsz.py  plot_all_susc.py  plot_all_susc_1.py  plot_all_susc_2.py  plot_all_susc_3.py  plot_all_susc_4.py  plot_all_susc_jj.py  plot_bubble_as_function_q_w.py  plot_int_non_int_susceptibilities.py  plot_int_non_int_susceptibilities_1.py  plot_int_non_int_susceptibilities_2.py  plot_int_non_int_susceptibilities_3.py  plot_int_non_int_susceptibilities_4.py  plot_phase_boundary.py  plot_phase_boundary_2.py  readFile2.cpp  spline.cpp  (+4 more)
mea/analytic_continuations/: bubble_iqn_U_0_beta_10_Nk_351_Ntau_557_q_pi.dat.pade  bubble_iqn_U_0_beta_10_Nk_351_Ntau_557_q_pi_2.dat.pade  bubble_iqn_U_0_beta_10_Nk_351_Ntau_557_q_pi_4.dat.pade
mea/cpp_tests/: GG_vertex_first_corrections.cpp  GG_vertex_first_corrections.hpp  Makefile  Makefile_DIV  Makefile_VC  Makefile_fewer_moments  Makefile_first_vertex_corr  Makefile_first_vertex_corr_no_cubic_spl  Makefile_first_vertex_corr_no_cubic_spl_2D  Makefile_first_vertex_corr_no_cubic_spl_GCC  Makefile_vc_1D  Makefile_vc_fl_1D  Makefile_vc_no_fl_1D  Makefile_vc_no_fl_1D_GCC_BEO  Makefile_vc_no_fl_2D  cubic_spline_GG_q.cpp  cubic_spline_GG_q_fewer_moments.cpp  cubic_spline_GG_vertex_first_corrections.cpp  cubic_splines_tests.cpp  divergence_susceptibilities.cpp  divergence_susceptibilities_first.cpp  pade_sum.py  spline_cpp_tests.cpp  sus_vertex_corrections.cpp  sus_vertex_corrections.hpp  sus_vertex_corrections_1D.cpp  sus_vertex_corrections_1D.hpp  sus_vertex_corrections_1D_flattened.cpp  sus_vertex_corrections_1D_flattened.hpp  sus_vertex_corrections_1D_not_flattened.cpp  sus_vertex_corrections_1D_not_flattened.hpp  sus_vertex_corrections_2D.cpp  sus_vertex_corrections_2D.hpp  sus_vertex_corrections_2D_flattened.cpp  sus_vertex_corrections_2D_flattened.hpp  sus_vertex_corrections_2D_not_flattened.cpp  sus_vertex_corrections_2D_not_flattened.hpp  sus_vertex_corrections_2D_not_flattened_BACKUP.cpp  sus_vertex_corrections_2D_not_flattened_BACKUP.hpp  sus_vertex_corrections_BACKUP.cpp  (+5 more)
mea/python_modules/: IPT_Utils.py  cubicspline.py  linearspline.py  test.py
src/: IPT2nd3rdorderSingle2.cpp  IPT2nd3rdorderSingle2.hpp  file_utils.cpp  file_utils.hpp  green_utils.cpp  green_utils.hpp  integral_utils.cpp  integral_utils.hpp  json_utils.cpp  json_utils.hpp  spl.cpp  spl.hpp  susceptibilities.cpp  susceptibilities.hpp  thread_utils.cpp  thread_utils.hpp  tridiagonal.hpp  wrapper_utils.hpp
test/: Makefile  test.cpp
test/src/: test_utils.cpp  test_utils.hpp
